# rtep2019_team18

./: .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  CNAME  README.md  conanfile.txt  test_dont_commit.cpp
hardware/Electronics/: readme.md
hardware/Electronics/IMU/: MPU6050_version_2.brd  MPU6050_version_2.sch
hardware/Electronics/IMU/EAGLE Files/: MPU6050.brd  MPU6050.sch
hardware/Electronics/Integration Board/: Integration board_3008.brd  Integration board_3008.sch  Integration board_3008_version_2.brd
hardware/IMU/: MPU6050.brd  MPU6050.sch
hardware/Integration Board/: Integration board.brd  Integration board_3008.brd  Integration board_3008_version_2.sch  Integration board_3204.brd  Integration board_3204.sch
hardware/Wearables/: README.md
hardware/Wearables/IMU case/STL files/: Bottom part.stl  Top part.stl
hardware/Wearables/RPI box/STL files/: Base.STL  Hook.STL  Middle.STL  Top.STL
include/: common_types.h
include/IMU/: IMU.h
include/analysis/: gait_cycle_splitter.h  peak_analysis.h
include/fsr/: fsr_reader.h
include/mp3/: mp3.h
include/telemetry/: client.h  server.h
include/wiringPi/: wiringPi.h  wiringPiI2C.h
lib/: CMakeLists.txt
lib/IMU/: IMU.cpp
lib/analysis/: gait_cycle_splitter.cpp
lib/fsr/: fsr_reader.cpp
lib/mp3/: mp3.cpp
lib/telemetry/: client.cpp  server.cpp
lib/wiringPi/: PiHiPri.c  softPwm.c  softTone.c  wiringPi.c  wiringPiI2C.c
tests/: CMakeLists.txt  dummy.cpp
tools/: CMakeLists.txt
tools/GaitAnalysis/: CMakeLists.txt  main.cpp
tools/IMUStreamReader/: CMakeLists.txt  main.cpp
tools/IMUStreamer/: CMakeLists.txt  main.cpp
tools/MockIMUStreamer/: CMakeLists.txt  main.cpp
tools/QtGAITGui/: CMakeLists.txt  CalibrateWindow.cpp  CalibrateWindow.hpp  CircleWidget.cpp  CircleWidget.hpp  FinalWindow.cpp  FinalWindow.hpp  Level_weight_shifting.cpp  Level_weight_shifting.hpp  MainWindow.cpp  MainWindow.hpp  TargetBase.h  Training_mode.cpp  Training_mode.hpp  WelcomeWindow.cpp  WelcomeWindow.hpp  WindowBase.hpp  intro_window.cpp  intro_window.hpp  main.cpp  main.hpp  progressbar.cpp  progressbar.hpp
tools/QtIMUDisplay/: CMakeLists.txt  CircleWidget.cpp  CircleWidget.hpp  Level_weight_shifting.cpp  Training_mode.cpp  Training_mode.hpp  chart.cpp  chart.h  intro_window.cpp  intro_window.hpp  main.cpp  main_window.cpp  main_window.h  progressbar.cpp  progressbar.hpp
tools/QtSavedataDisplay/: CMakeLists.txt  chart.cpp  chart.h  chart_view.cpp  chart_view.h  main.cpp  main_window.cpp  main_window.h
tools/Streamer/: CMakeLists.txt  main.cpp
tools/fsrReader/: CMakeLists.txt  main.cpp
utils/: analyse_rawdata.py  check_code_format.sh  cnn_model.py  format_diff_code.sh  pre-commit
utils/savedata/: luca-bad-9.04.json  luca-bad-footdrop-9.04.json  luca-good-9.04.json
